@@ -6,19 +6,19 @@
 
     <groupId>io.github.fishlikewater</groupId>
     <artifactId>raiden-validation-core</artifactId>
-    <version>1.0.0-java8</version>
+    <version>2.0.0</version>
 
     <packaging>jar</packaging>
     <name>raiden-validation-core</name>
     <description>参数校验</description>
 
     <properties>
-        <raiden-processor.version>1.0.0</raiden-processor.version>
+        <raiden-processor.version>2.0.0</raiden-processor.version>
         <lombok.version>1.18.30</lombok.version>
-        <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
-        <maven.compiler.source.version>1.8</maven.compiler.source.version>
-        <maven.compiler.target.version>1.8</maven.compiler.target.version>
+        <jakarta.validation.version>3.0.2</jakarta.validation.version>
+        <maven.compiler.compilerVersion>21</maven.compiler.compilerVersion>
+        <maven.compiler.source.version>21</maven.compiler.source.version>
+        <maven.compiler.target.version>21</maven.compiler.target.version>
         <maven-compiler.version>3.12.1</maven-compiler.version>
         <maven-source.verion>3.3.0</maven-source.verion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -93,7 +93,12 @@
                     <source>${maven.compiler.source.version}</source>
                     <target>${maven.compiler.target.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <!--<compilerArgument>-proc:none</compilerArgument>-->
+                    <compilerArgs>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
